package _3_PlayersAndMonsters;

public class BladeKnight extends DarkKnight {
    public BladeKnight(String username, int level) {
        super(username, level);
    }
}
