package _3_PlayersAndMonsters;

public class DarkWizard extends Wizard {
    public DarkWizard(String username, int level) {
        super(username, level);
    }
}
