package _3_PlayersAndMonsters;

public class Elf extends Hero {
    public Elf(String username, int level) {
        super(username, level);
    }
}
