package _3_PlayersAndMonsters;

public class Knight extends Hero {
    public Knight(String username, int level) {
        super(username, level);
    }
}
