package _3_PlayersAndMonsters;

public class MuseElf extends Elf {
    public MuseElf(String username, int level) {
        super(username, level);
    }
}
