@startuml

title ___3_PLAYERSANDMONSTERS's Class Diagram__\n

  namespace _3_PlayersAndMonsters {
    class _3_PlayersAndMonsters.BladeKnight {
        + BladeKnight()
    }
  }
  

  namespace _3_PlayersAndMonsters {
    class _3_PlayersAndMonsters.DarkKnight {
        + DarkKnight()
    }
  }
  

  namespace _3_PlayersAndMonsters {
    class _3_PlayersAndMonsters.DarkWizard {
        + DarkWizard()
    }
  }
  

  namespace _3_PlayersAndMonsters {
    class _3_PlayersAndMonsters.Elf {
        + Elf()
    }
  }
  

  namespace _3_PlayersAndMonsters {
    class _3_PlayersAndMonsters.Hero {
        - level : int
        - username : String
        + Hero()
        + getLevel()
        + getUsername()
        + toString()
    }
  }
  

  namespace _3_PlayersAndMonsters {
    class _3_PlayersAndMonsters.Knight {
        + Knight()
    }
  }
  

  namespace _3_PlayersAndMonsters {
    class _3_PlayersAndMonsters.Main {
        {static} + main()
    }
  }
  

  namespace _3_PlayersAndMonsters {
    class _3_PlayersAndMonsters.MuseElf {
        + MuseElf()
    }
  }
  

  namespace _3_PlayersAndMonsters {
    class _3_PlayersAndMonsters.SoulMaster {
        + SoulMaster()
    }
  }
  

  namespace _3_PlayersAndMonsters {
    class _3_PlayersAndMonsters.Wizard {
        + Wizard()
    }
  }
  

  _3_PlayersAndMonsters.BladeKnight -up-|> _3_PlayersAndMonsters.DarkKnight
  _3_PlayersAndMonsters.DarkKnight -up-|> _3_PlayersAndMonsters.Knight
  _3_PlayersAndMonsters.DarkWizard -up-|> _3_PlayersAndMonsters.Wizard
  _3_PlayersAndMonsters.Elf -up-|> _3_PlayersAndMonsters.Hero
  _3_PlayersAndMonsters.Knight -up-|> _3_PlayersAndMonsters.Hero
  _3_PlayersAndMonsters.MuseElf -up-|> _3_PlayersAndMonsters.Elf
  _3_PlayersAndMonsters.SoulMaster -up-|> _3_PlayersAndMonsters.DarkWizard
  _3_PlayersAndMonsters.Wizard -up-|> _3_PlayersAndMonsters.Hero


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
